feat: sync up the creating booth template API (#111)
* feat: refactor api create booth template

* feat: env example

* feat: openapi
